Ignore files which don't contain POD.

--- a/dist.ini
+++ b/dist.ini
@@ -20,6 +20,7 @@ MIME::Base64             = 0
 Template                 = 0
 Readonly                 = 0
 URI::Escape              = 0
+IO::File                 = 0
 JSON                     = 2.04
 
 [PodSyntaxTests]
