--- a/dist.ini
+++ b/dist.ini
@@ -24,5 +24,5 @@ IO::File                 = 0
 JSON                     = 2.04
 
 [PodSyntaxTests]
-[PodCoverageTests]
+;[PodCoverageTests]
 ;[Test::Perl::Critic]
