Added Git plugin.

--- a/dist.ini
+++ b/dist.ini
@@ -23,6 +23,8 @@ URI::Escape              = 0
 IO::File                 = 0
 JSON                     = 2.04
 
+[@Git]
+
 [PodSyntaxTests]
 ;[PodCoverageTests]
 ;[Test::Perl::Critic]
