Switche to automatic version insertion by Dist::Zilla.

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Pod-ProjectDocs
-version = 0.40
+version = 0.41
 author  = Martin Gruner <martin.gruner@cpan.org>
 author  = Lyo Kato <lyo.kato@gmail.com>
 license = Perl_5
@@ -23,7 +23,12 @@ URI::Escape              = 0
 IO::File                 = 0
 JSON                     = 2.04
 
+[PkgVersion]
+
 [@Git]
+
+[GitHub::Meta]
+repo = p5-pod-projectdocs
 
 [PodSyntaxTests]
 ;[PodCoverageTests]
