Added automatically generated Readme.md.

--- a/dist.ini
+++ b/dist.ini
@@ -24,6 +24,7 @@ IO::File                 = 0
 JSON                     = 2.04
 
 [PkgVersion]
+[CPANFile]
 
 [@Git]
 
@@ -33,3 +34,12 @@ repo = p5-pod-projectdocs
 [PodSyntaxTests]
 ;[PodCoverageTests]
 ;[Test::Perl::Critic]
+
+[ReadmeAnyFromPod / README.md in build]
+type     = markdown
+filename = Readme.md
+location = build
+phase    = build
+
+[CopyFilesFromBuild]
+copy = Readme.md
