Don't generate two readme files.

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,9 @@ author  = Lyo Kato <lyo.kato@gmail.com>
 license = Perl_5
 copyright_holder = Lyo Kato <lyo.kato@gmail.com>
 
-[@Basic]
+[@Filter]
+-bundle = @Basic
+-remove = Readme
 
 [Prereqs]
 Pod::Parser              = 1.32
