Small fixes. Activated Perl::Critic tests.

--- a/dist.ini
+++ b/dist.ini
@@ -26,6 +26,10 @@ IO::File                 = 0
 JSON                     = 2.04
 
 [PkgVersion]
+use_package = 1
+
+[CheckVersionIncrement]
+
 [CPANFile]
 
 [@Git]
@@ -35,7 +39,7 @@ repo = p5-pod-projectdocs
 
 [PodSyntaxTests]
 ;[PodCoverageTests]
-;[Test::Perl::Critic]
+[Test::Perl::Critic]
 
 [ReadmeAnyFromPod / README.md in build]
 type     = markdown
