Removed old parser and updated dependencies.

--- a/dist.ini
+++ b/dist.ini
@@ -10,18 +10,16 @@ copyright_holder = Lyo Kato <lyo.kato@gmail.com>
 -remove = Readme
 
 [Prereqs]
-Pod::Parser              = 1.32
-Pod::ParseUtils          = 0
+Pod::Simple::XHTML       = 0
 Class::Accessor::Fast    = 0
 Class::Data::Inheritable = 0
-File::Spec               = 0
 File::Basename           = 0
+File::Spec               = 0
 File::Find               = 0
 File::Copy               = 0
 MIME::Base64             = 0
 Template                 = 0
 Readonly                 = 0
-URI::Escape              = 0
 IO::File                 = 0
 JSON                     = 2.04
 
