Add dependency on HTML::Entities.

--- a/dist.ini
+++ b/dist.ini
@@ -17,6 +17,7 @@ File::Basename           = 0
 File::Spec               = 0
 File::Find               = 0
 File::Copy               = 0
+HTML::Entities           = 0
 MIME::Base64             = 0
 Template                 = 0
 Readonly                 = 0
