Improved self-testing with Perl::Critic.

--- a/dist.ini
+++ b/dist.ini
@@ -39,6 +39,7 @@ repo = p5-pod-projectdocs
 [PodSyntaxTests]
 ;[PodCoverageTests]
 [Test::Perl::Critic]
+critic_config = perlcriticrc
 
 [ReadmeAnyFromPod / README.md in build]
 type     = markdown
