--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,8 @@ copyright_holder = Lyo Kato <lyo.kato@gmail.com>
 -remove = Readme
 
 [Prereqs]
+; require Perl 5.12 because of the "package XYZ $Version" statements.
+perl                     = 5.012
 Pod::Simple::XHTML       = 0
 Class::Accessor::Fast    = 0
 Class::Data::Inheritable = 0
