Improve versioning handling.

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Pod-ProjectDocs
-version = 0.47
+version = 0.47.1
 author  = Martin Gruner <martin.gruner@cpan.org>
 author  = Lyo Kato <lyo.kato@gmail.com>
 license = Perl_5
@@ -10,9 +10,7 @@ copyright_holder = Lyo Kato <lyo.kato@gmail.com>
 -remove = Readme
 
 [Prereqs]
-; require Perl 5.12 because of the "package XYZ $Version" statements.
-perl                     = 5.012
-Pod::Simple::XHTML       = 0
+Pod::Simple::XHTML       = 3.31
 Class::Accessor::Fast    = 0
 Class::Data::Inheritable = 0
 File::Basename           = 0
@@ -26,8 +24,7 @@ Readonly                 = 0
 IO::File                 = 0
 JSON                     = 2.04
 
-[PkgVersion]
-use_package = 1
+[OurPkgVersion]
 
 [CheckVersionIncrement]
 
