Switch to Pod::Simple::XHTML as internal parser engine.
- Rewrite of the Parser to use Pod::Simple::XHTML internally instead of legacy Pod::Parser. This fixes some issues with linking and adds proper encoding support based on the Pod command `=encoding`.
- Therefore the `-charset` parameter was removed. Pod sources are correctly processed as described by the specification, all output files are generated as UTF-8.
- Support for function source code embedding was removed in order to focus on proper Pod rendering instead.
- Fixed support for Perl 5.8 and 5.10 that was missing in 0.45.

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Pod-ProjectDocs
-version = 0.45
+version = 0.47_03
 author  = Martin Gruner <martin.gruner@cpan.org>
 author  = Lyo Kato <lyo.kato@gmail.com>
 license = Perl_5
@@ -10,23 +10,21 @@ copyright_holder = Lyo Kato <lyo.kato@gmail.com>
 -remove = Readme
 
 [Prereqs]
-Pod::Parser              = 1.32
-Pod::ParseUtils          = 0
+Pod::Simple::XHTML       = 3.31
 Class::Accessor::Fast    = 0
 Class::Data::Inheritable = 0
-File::Spec               = 0
 File::Basename           = 0
+File::Spec               = 0
 File::Find               = 0
 File::Copy               = 0
+HTML::Entities           = 0
 MIME::Base64             = 0
 Template                 = 0
 Readonly                 = 0
-URI::Escape              = 0
 IO::File                 = 0
 JSON                     = 2.04
 
-[PkgVersion]
-use_package = 1
+[OurPkgVersion]
 
 [CheckVersionIncrement]
 
@@ -40,6 +38,7 @@ repo = p5-pod-projectdocs
 [PodSyntaxTests]
 ;[PodCoverageTests]
 [Test::Perl::Critic]
+critic_config = perlcriticrc
 
 [ReadmeAnyFromPod / README.md in build]
 type     = markdown
