Improve package kwalitee.

--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ copyright_holder = Lyo Kato <lyo.kato@gmail.com>
 -remove = Readme
 
 [Prereqs]
+perl                     = 5.8.0
 Pod::Simple::XHTML       = 3.31
 Class::Accessor::Fast    = 0
 Class::Data::Inheritable = 0
@@ -24,11 +25,16 @@ Readonly                 = 0
 IO::File                 = 0
 JSON                     = 2.04
 
+[Prereqs / TestRequires]
+Test::Pod                = 0
+
 [OurPkgVersion]
 
 [CheckVersionIncrement]
 
 [CPANFile]
+[MetaJSON]
+[MetaProvides::Package]
 
 [@Git]
 
