--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Pod-ProjectDocs
-version = 0.48
+version = 0.48_001
 author  = Martin Gruner <martin.gruner@cpan.org>
 author  = Lyo Kato <lyo.kato@gmail.com>
 license = Perl_5
