Added missing build_requires.

--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,11 @@ Readonly                 = 0
 IO::File                 = 0
 JSON                     = 2.04
 
+[Prereqs / BuildRequires]
+File::Path               = 0
+Test::More               = 0
+lib                      = 0
+
 [Prereqs / TestRequires]
 Test::Pod                = 0
 
