Ported to Moose.

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Pod-ProjectDocs
-version = 0.48_002
+version = 0.48_003
 author  = Martin Gruner <martin.gruner@cpan.org>
 author  = Lyo Kato <lyo.kato@gmail.com>
 license = Perl_5
@@ -12,8 +12,7 @@ copyright_holder = Lyo Kato <lyo.kato@gmail.com>
 [Prereqs]
 perl                     = 5.8.0
 Pod::Simple::XHTML       = 3.31
-Class::Accessor::Fast    = 0
-Class::Data::Inheritable = 0
+Moose                    = 0
 File::Basename           = 0
 File::Spec               = 0
 File::Find               = 0
