Improved handling of Carp.

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ copyright_holder = Lyo Kato <lyo.kato@gmail.com>
 
 [Prereqs]
 perl                     = 5.8.0
+Carp                     = 0
 Pod::Simple::XHTML       = 3.31
 Moose                    = 0
 File::Basename           = 0
